--- a/views/user/service.ejs
+++ b/views/user/service.ejs
@@ -45,7 +45,7 @@
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
                     <h1 class="display-1 text-white mb-md-4">Our Services</h1>
-                    <a href="/home" class="btn btn-primary py-md-3 px-md-5 me-3">Home</a>
+                    <a href="/" class="btn btn-primary py-md-3 px-md-5 me-3">Home</a>
                     <a href="/service" class="btn btn-secondary py-md-3 px-md-5">Services</a>
                 </div>
             </div>
